--- a/styles/style.css
+++ b/styles/style.css
@@ -132,7 +132,7 @@
   padding: 0;
   max-width: 1280px;
   padding: 0 48px;
-  margin: 0 auto;
+  margin: 0 auto 92px;
 }
 
 .photo-grid {
@@ -142,5 +142,138 @@
 }
 
 .photo-grid__img {
-    width: 100%;
+  width: 100%;
+  height: auto;
+}
+
+.page__places {
+  max-width: 984px;
+  margin: 0 auto 92px;
+}
+
+.places__list {
+  list-style: none;
+  padding: 0;
+}
+
+.place {
+  display: grid;
+  grid-template-columns: minmax(320px, 460px) minmax(484px, 1fr);
+  column-gap: 40px;
+  row-gap: 48px;
+}
+
+.place__title {
+  font-size: 72px;
+  font-weight: 900;
+  line-height: 1.05;
+  text-align: left;
+  margin: 0;
+  align-self: start;
+
+}
+
+.place__website {
+  align-self: end;
+}
+
+.place__url-heading {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1;
+  letter-spacing: 2px;
+  text-align: left;
+  color: #aaa;
+  text-transform: uppercase;
+  margin: 0;
+  margin-bottom: 12px;
+}
+
+.place__link {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.2;
+  color: #fff;
+  text-decoration: none;
+  border-bottom: 1px solid #fff;
+}
+
+.place__paragraph {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.6;
+  margin-top: 0;
+  margin-bottom: 26px;
+}
+
+.place__paragraph:last-child {
+  margin-bottom: 0;
+}
+
+.place__image {
+  width: 100%;
+}
+
+.places__item {
+  margin-bottom: 80px;
+}
+
+.places__item:last-child {
+  margin-bottom: 0;
+}
+
+.page__cover {
+  max-width: 1184px;
+  margin: 0 auto 92px;
+  display: grid;
+  place-items: center;
+}
+
+.cover__text {
+  grid-row: 1/-1;
+  grid-column: 1/-1;
+  z-index: 1;
+}
+
+.cover__overlay {
+  grid-row: 1/-1;
+  grid-column: 1/-1;
+  position: relative;
+}
+
+.cover__overlay::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #2a2c2f;
+  opacity: .3;
+}
+
+.cover__title {
+  font-size: 72px;
+  font-weight: 900;
+  line-height: 1.05;
+  text-align: center;
+  max-width: 560px;
+  margin: 0 auto 32px;
+}
+
+.cover__subtitle {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.2;
+  text-align: center;
+  max-width: 360px;
+  margin: 0 auto;
+}
+
+.cover__background {
+  width: 100%;
+  height: auto;
+
 }
