--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
 }
 
 .page__header {
-  padding: 28px 48px 56px;
+  margin: 28px 48px 56px;
 }
 
 .header {
@@ -22,12 +22,14 @@
 .header__img {
   width: 176px;
   height: 52px;
+  display: block;
 }
 
 .header__lang {
   display: flex;
   list-style: none;
   margin: 0;
+  margin-top: 14px;
   padding: 0;
 }
 
@@ -44,7 +46,7 @@
 }
 
 .header__lang-link_active {
-  text-decoration: underline;
+  border-bottom: 1px solid #fff;
 }
 
 .lead__title {
@@ -110,6 +112,8 @@
   line-height: 1.625;
   text-align: left;
   max-width: 690px;
+  margin: 0;
+  margin-bottom: 33px;
 }
 
 .intro__list {
@@ -158,10 +162,13 @@
 
 .place {
   display: grid;
-  grid-template-columns: minmax(320px, 460px) minmax(484px, 1fr);
+  /* grid-template-columns: minmax(460px, 320px) minmax(484px, 288px); */
+  grid-template-columns: 460px 484px;
+  /* grid-template-columns: minmax(320px, 460px) 1fr; */
   column-gap: 40px;
   row-gap: 48px;
 }
+
 
 .place__title {
   font-size: 72px;
@@ -170,7 +177,6 @@
   text-align: left;
   margin: 0;
   align-self: start;
-
 }
 
 .place__website {
@@ -180,7 +186,7 @@
 .place__url-heading {
   font-size: 12px;
   font-weight: 400;
-  line-height: 1;
+  line-height: 1.6;
   letter-spacing: 2px;
   text-align: left;
   color: #aaa;
@@ -196,7 +202,13 @@
   color: #fff;
   text-decoration: none;
   border-bottom: 1px solid #fff;
+  transition: opacity 350ms ease;
 }
+
+.place__link:hover {
+  opacity: .8;
+}
+
 
 .place__paragraph {
   font-size: 18px;
@@ -229,14 +241,30 @@
   place-items: center;
 }
 
-.cover__text {
+/* .cover__text {
   grid-row: 1/-1;
   grid-column: 1/-1;
   z-index: 1;
+} */
+
+.cover__title {
+  font-size: 72px;
+  font-weight: 900;
+  line-height: 1.05;
+  text-align: center;
+  max-width: 560px;
+  margin: 0 auto 32px;
+  color: #fff;
+  text-decoration: none;
+  display: inline-block;
+  grid-row: 1/-1;
+  grid-column: 1/-1;
+  z-index: 1;
+  align-self: end;
 }
 
 .cover__overlay {
-  grid-row: 1/-1;
+  grid-row: 1/3;
   grid-column: 1/-1;
   position: relative;
 }
@@ -252,15 +280,16 @@
   bottom: 0;
   background-color: #2a2c2f;
   opacity: .3;
+  transition: opacity 250ms ease-in;
 }
 
-.cover__title {
-  font-size: 72px;
-  font-weight: 900;
-  line-height: 1.05;
-  text-align: center;
-  max-width: 560px;
-  margin: 0 auto 32px;
+/* .cover__overlay:hover::before {
+  opacity: .8;
+} */
+
+.cover__title:hover~.cover__overlay::before {
+  /* background-color: rgba(42, 44, 47, .8); */
+  opacity: .8;
 }
 
 .cover__subtitle {
@@ -270,10 +299,473 @@
   text-align: center;
   max-width: 360px;
   margin: 0 auto;
+  grid-row: 2/3;
+  grid-column: 1/-1;
+  z-index: 1;
+  /* transform: translateY(100%); */
+  /* margin-top: 21%; */
+  align-self: start;
 }
 
 .cover__background {
   width: 100%;
   height: auto;
+}
+
+.footer {
+  display: flex;
+  align-items: baseline;
+}
+
+.page__footer {
+  margin-top: 92px;
+  margin-bottom: 24px;
+}
+
+.footer__nav {
+  margin-left: 48px;
+  margin-right: auto;
+}
+
+.footer__list {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer__item {
+  margin-right: 24px;
+}
+
+.footer__item:last-child {
+  margin-right: 0;
+}
+
+.footer__link {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.125;
+  color: #fff;
+  transition: opacity 350ms ease;
+}
+
+.footer__link:hover {
+  opacity: .8;
+}
+
+.footer__copyright {
+  margin: 0;
+  margin-right: 48px;
+  font-family: Inter;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.15;
+  text-align: right;
+}
+
+@media screen and (max-width: 1152px) {
+  .page__lead {
+    max-width: 956px;
+  }
+
+  .page__intro-text {
+    max-width: 956px;
+  }
+
+  .page__photo-grid {
+    padding: 0;
+    max-width: 956px;
+    margin: 0 auto 92 px;
+  }
+
+  .places__item {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  /* .place__image {
+      max-width: 450px;
+      height: auto;
+    } */
+
+}
+
+
+@media screen and (max-width: 1024px) {
+
+  .lead__subtitle {
+    margin-bottom: 56px;
+  }
+
+  .page__lead {
+    max-width: 928px;
+  }
+
+  .page__intro-text {
+    max-width: 928px;
+  }
+
+  .page__photo-grid {
+    max-width: 928px;
+  }
+
+  .place {
+    max-width: 928px;
+    grid-template-columns: 440px 456px;
+    column-gap: 32px;
+  }
+
+  .place__paragraph {
+    margin-bottom: 27px;
+  }
+
+  /* .place__image {
+    max-width: 440px;
+    height: auto;
+  } */
+
+  .places__item {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .photo-grid {
+    gap: 14px;
+  }
+
+  .cover__overlay {
+    max-height: 640px;
+  }
+
+}
+
+@media screen and (max-width: 960px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
+
+
+  .page__intro-text {
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+
+  .page__photo-grid {
+    padding: 0 24px 0 24px;
+
+  }
+
+  .place {
+    max-width: 876px;
+    grid-template-columns: 425px 423px;
+    column-gap: 28px;
+  }
+}
+
+@media screen and (max-width: 890px) {
+  .place {
+    max-width: 845px;
+    grid-template-columns: 410px 413px;
+  }
+
+}
+
+@media screen and (max-width: 860px) {
+  .place {
+    max-width: 812px;
+    grid-template-columns: 390px 393px;
+  }
+
+}
+
+
+@media screen and (max-width: 820px) {
+
+  .lead__caption {
+    margin-left: 24px;
+  }
+
+  .page__intro-text,
+  .intro__title,
+  .intro__text,
+  .intro__list {
+    max-width: 720px;
+  }
+
+  .page__intro-text {
+    margin-top: 88px;
+    margin-bottom: 88px;
+  }
+
+  .page__photo-grid {
+    padding: 0;
+    max-width: 720px;
+  }
+
+
+  .places__item {
+    max-width: 720px;
+  }
+
+  .place {
+    /* max-width: 928px; */
+    grid-template-columns: 340px 352px;
+    column-gap: 28px;
+  }
+
+  .place__title {
+    font-size: 42px;
+    line-height: 1.1;
+    max-width: 330px;
+  }
+
+  .place__paragraph {
+    font-size: 16px;
+    line-height: 1.625;
+    margin-bottom: 25px;
+  }
+
+  .photo-grid {
+    gap: 16px;
+  }
+
+  .page__places {
+    margin-bottom: 90px;
+  }
+
+  /* .cover__overlay {
+    max-height: 480px;
+  } */
+
+  .page__footer {
+    margin-top: 88px;
+  }
+
+  .footer__nav {
+    margin-left: 24px;
+  }
+
+  .footer__copyright {
+    margin-right: 24px;
+  }
+
+}
+
+@media screen and (max-width: 730px) {
+
+  .lead__title {
+    font-size: 52px;
+  }
+
+  .lead__subtitle {
+    font-size: 20px;
+    max-width: 288px;
+  }
+
+  .place {
+    display: block;
+  }
+
+  .place__title {
+    font-size: 32px;
+    line-height: 1.1;
+    margin: 0 16px 32px 16px;
+  }
+
+  .place__website {
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-bottom: 32px;
+  }
+
+  .place__image {
+    margin-bottom: 32px;
+  }
+
+  .place__text {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
+  .places__item {
+    margin-bottom: 50px;
+  }
+
+  .page__footer {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .footer__nav {
+    margin-left: 0;
+    margin: 0 auto 20px;
+    /* width: 100%; */
+  }
+
+  .footer__copyright {
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 505px) {
+  .footer {
+    display: block;
+  }
+
+  .footer__list {
+    display: block;
+  }
+
+  .footer__item {
+    margin-right: 0;
+    margin-bottom: 32px;
+  }
+
+  .footer__item:last-child {
+    margin-bottom: 0;
+  }
+
+  .footer__link {
+    font-size: 24px;
+    line-height: 1;
+
+  }
+
+  .footer__nav {
+    margin-left: 16px;
+    margin-bottom: 48px;
+  }
+
+  .footer__copyright {
+    margin-left: 16px;
+    text-align: left;
+  }
+
+  .cover__title {
+    font-size: 32px;
+    line-height: 1.1;
+    max-width: 255px;
+    margin-bottom: 16px;
+  }
+
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 1.15;
+    max-width: 288px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .page__header {
+    margin: 16px 16px 48px;
+  }
+
+  .header__img {
+    width: 142px;
+    height: 42px;
+  }
+
+  .header {
+    align-items: center;
+  }
+
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 1.1;
+  }
+
+  .lead__title {
+    font-size: 40px;
+    line-height: 1.1;
+  }
+
+  .page__intro-text {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
+  .intro__title {
+    font-size: 32px;
+    font-weight: 900;
+    line-height: 1.1;
+  }
+
+  .intro__text {
+    margin-bottom: 34px;
+  }
+
+  .page__intro-text {
+    margin-top: 64px;
+    margin-bottom: 64px;
+  }
+
+  .lead__subtitle {
+    font-size: 16px;
+    line-height: 1.25;
+    max-width: 288px;
+  }
+
+  .lead__caption {
+    margin-left: 16px;
+  }
+
+  /* .photo-grid__img {
+    max-width: 288px;
+    height: auto;
+  } */
+
+  .place {
+    display: block;
+  }
+
+  .place__title {
+    font-size: 32px;
+    line-height: 1.1;
+    margin: 0 16px 32px 16px;
+  }
+
+  .place__website {
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-bottom: 32px;
+  }
+
+  .place__image {
+    margin-bottom: 32px;
+  }
+
+  .place__text {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
+  .places__item {
+    margin-bottom: 50px;
+  }
+
+  .page__photo-grid {
+    margin: 0 16px 64px 16px;
+  }
+
+  .photo-grid {
+    gap: 12px;
+  }
+
+  .page__places {
+    margin-bottom: 66px;
+  }
+
+  .page__cover {
+    margin-bottom: 64px;
+  }
+
+  .page__footer {
+    margin-top: 0;
+  }
+
+
+
 
 }
