--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,50 +1,63 @@
-.place {
+.place{
+  display: flex;
+  justify-content:space-between;
+  flex-wrap: wrap;
+  row-gap: 48px;
+  column-gap: 40px;
+}
+
+@media screen and (max-width: 1024px){
+  .place {
+    column-gap: 32px;
+  }
+}
+/* .place {
   display: grid;
   grid-template-columns: 460px 484px;
   column-gap: 40px;
   row-gap: 48px;
-}
+} */
 
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1024px) {
   .place {
     max-width: 928px;
     grid-template-columns: 440px 456px;
     column-gap: 32px;
   }
-}
+} */
 
-@media screen and (max-width: 960px) {
+/* @media screen and (max-width: 960px) {
   .place {
     max-width: 876px;
     grid-template-columns: 425px 423px;
     column-gap: 28px;
   }
-}
+} */
 
-@media screen and (max-width: 890px) {
+/* @media screen and (max-width: 890px) {
   .place {
     max-width: 845px;
     grid-template-columns: 410px 413px;
   }
-}
+} */
 
-@media screen and (max-width: 860px) {
+/* @media screen and (max-width: 860px) {
   .place {
     max-width: 812px;
     grid-template-columns: 390px 393px;
   }
-}
+} */
 
-@media screen and (max-width: 820px) {
+/* @media screen and (max-width: 820px) {
   .place {
-    /* max-width: 928px; */
+    max-width: 928px;
     grid-template-columns: 340px 352px;
     column-gap: 28px;
   }
-}
+} */
 
-@media screen and (max-width: 730px) {
+/* @media screen and (max-width: 730px) {
   .place {
     display: block;
   }
-}
+} */
