--- a/blocks/places/__list/places__list.css
+++ b/blocks/places/__list/places__list.css
@@ -1,5 +1,11 @@
 .places__list {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 1024px) {
+  .places__list {
+    max-width: 928px;
+  }
 }
