--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,10 +1,13 @@
 .lead__subtitle {
-  font-size: 30px;
+  /* font-size: 30px; */
+  font-size: clamp(16px, 3.95vw, 30px);
   font-weight: 400;
   line-height: 1.2;
   text-align: center;
   margin: 0 auto 64px;
-  max-width: 640px;
+  max-width: clamp(288px, 83vw,640px);
+  
+  /* max-width: 640px; */
 }
 
 
@@ -16,15 +19,15 @@
 
 @media screen and (max-width: 730px) {
   .lead__subtitle {
-    font-size: 20px;
-    max-width: 288px;
+    /* font-size: 20px; */
+    /* max-width: 288px; */
   }
 }
 
 @media screen and (max-width: 425px) {
   .lead__subtitle {
-    font-size: 16px;
+    /* font-size: 16px; */
     line-height: 1.25;
-    max-width: 288px;
+    /* max-width: 288px; */
   }
 }
