--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,6 @@
 .lead__title {
-  font-size: 96px;
+  /* font-size: 96px; */
+  font-size: clamp(40px, 12.5vw, 96px);
   font-weight: 900;
   line-height: 1.05;
   text-align: center;
@@ -7,7 +8,7 @@
   margin: 0 auto 32px;
 }
 
-@media screen and (max-width: 730px) {
+/* @media screen and (max-width: 730px) {
   .lead__title {
     font-size: 72px;
   }
@@ -23,4 +24,4 @@
     font-size: 40px;
     line-height: 1.1;
   }
-}
+} */
