--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,7 +3,8 @@
   justify-content:space-between;
   flex-wrap: wrap;
   row-gap: 48px;
-  column-gap: 40px;
+  column-gap: clamp(32px, 3.125vw, 40px);
+  /* column-gap: 40px; */
 }
 
 @media screen and (max-width: 1024px){
