--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,4 +1,4 @@
-.place__website {
+/* .place__website {
   flex-basis: 484px;
   align-self: flex-end;
 }
@@ -7,13 +7,13 @@
   .place__website {
     flex-basis: 456px;
   }
-}
+} */
 
-/* .place__website {
+.place__website {
   align-self: end;
 }
 
-@media screen and (max-width: 730px) {
+/* @media screen and (max-width: 730px) {
   .place__website {
     margin-left: 16px;
     margin-right: 16px;
