--- a/blocks/page/__places/page__places.css
+++ b/blocks/page/__places/page__places.css
@@ -1,6 +1,7 @@
 .page__places {
-  max-width: 984px;
+  /* max-width: 984px; */
   margin: 0 auto 92px;
+  padding: 0 calc((100% - 984px) / 2);
 }
 
 @media screen and (max-width: 820px) {
