--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -17,14 +17,14 @@
 } */
 
 .place__image-container {
-  max-width: clamp(440px, 35.95vw, 460px);
+  /* max-width: clamp(340px, 35.95vw, 460px); */
   /* max-width: 460px; */
 
   /* flex-basis: 46.747%; */
 }
 
-@media screen and (max-width: 1024px) {
+/* @media screen and (max-width: 1024px) {
   .place__image-container {
     max-width: 440px;
   }
-}
+} */
