--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -12,6 +12,7 @@
 
 @media screen and (max-width: 1024px) {
   .place__paragraph {
+    font-size: clamp(16px, 1.7578125vw, 18px);
     margin-bottom: 27px;
   }
 }
@@ -19,7 +20,7 @@
 
 @media screen and (max-width: 820px) {
   .place__paragraph {
-    font-size: 16px;
+    /* font-size: 16px; */
     line-height: 1.625;
     margin-bottom: 25px;
   }
