--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,7 +1,6 @@
 .footer__copyright {
   margin: 0;
   margin-right: 48px;
-  font-family: Inter;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.15;
@@ -14,11 +13,11 @@
   }
 }
 
-@media screen and (max-width: 730px) {
+/* @media screen and (max-width: 730px) {
   .footer__copyright {
     margin-right: 0;
   }
-}
+} */
 
 @media screen and (max-width: 505px) {
   .footer__copyright {
