--- a/blocks/header/__lang-item/header__lang-item.css
+++ b/blocks/header/__lang-item/header__lang-item.css
@@ -1,3 +1,9 @@
-.header__lang-item:first-child {
+.header__lang-item {
   margin-right: 18px;
+  margin-bottom: 5px;
+}
+
+
+.header__lang-item:last-child {
+  margin-right: 0;
 }
