--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,8 +4,8 @@
   align-items: flex-end;
 }
 
-@media screen and (max-width: 425px) {
+/* @media screen and (max-width: 425px) {
   .header {
     align-items: center;
   }
-}
+} */
