--- a/pages/index.css
+++ b/pages/index.css
@@ -1,8 +1,10 @@
+@import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/page/__container/page__container.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/page/__header/page__header.css);
+@import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__img/header__img.css);
 @import url(../blocks/header/__lang/header__lang.css);
 @import url(../blocks/header/__lang-item/header__lang-item.css);
@@ -13,11 +15,13 @@
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__caption/lead__caption.css);
-@import url(../blocks/page/__intro-text/page__intro-text.css);
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/page/__intro/page__intro.css);
 @import url(../blocks/intro/__title/intro__title.css);
 @import url(../blocks/intro/__text/intro__text.css);
 @import url(../blocks/intro/__list/intro__list.css);
 @import url(../blocks/intro/__item-number/intro__item-number.css);
+@import url(../blocks/photo-gallery/__list/photo-gallery__list.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/page/__photo-grid/page__photo-grid.css);
 @import url(../blocks/photo-grid/__img/photo-grid__img.css);
@@ -33,9 +37,10 @@
 @import url(../blocks/place/__text/place__text.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
 @import url(../blocks/page/__cover/page__cover.css);
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__link/cover__link.css);
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
-@import url(../blocks/cover/__overlay/cover__overlay.css);
 @import url(../blocks/cover/__background/cover__background.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/page/__footer/page__footer.css);
