--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,20 +1,20 @@
 .cover__subtitle {
-  font-size: 18px;
+  font-size: clamp(14px, 2.34375vw, 18px);
+  /* font-size: 18px; */
   font-weight: 400;
   line-height: 1.2;
   text-align: center;
   max-width: 360px;
+  color: #fff;
+  text-decoration: none;
   margin: 0 auto;
-  grid-row: 2/3;
-  grid-column: 1/-1;
-  z-index: 1;
-  align-self: start;
+  z-index: 2;
 }
 
 @media screen and (max-width: 505px) {
   .cover__subtitle {
-    font-size: 14px;
-    line-height: 1.15;
+    /* font-size: 14px; */
+    /* line-height: 1.15; */
     max-width: 288px;
   }
 }
