--- a/blocks/footer/__nav/footer__nav.css
+++ b/blocks/footer/__nav/footer__nav.css
@@ -1,6 +1,6 @@
 .footer__nav {
   margin-left: 48px;
-  margin-right: auto;
+  /* margin-right: auto; */
 }
 
 @media screen and (max-width: 820px) {
@@ -11,14 +11,17 @@
 
 @media screen and (max-width: 730px) {
   .footer__nav {
-    margin-left: 0;
+    /* margin-left: 0; */
     margin: 0 auto 20px;
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 505px) {
   .footer__nav {
     margin-left: 16px;
+    margin-right: 16px;
     margin-bottom: 48px;
+    width: 90%;
   }
 }
