--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,7 @@
 .footer {
   display: flex;
   align-items: baseline;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 505px) {
