--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,7 +4,13 @@
   font-size: 24px;
   line-height: 1.15;
   text-decoration: none;
+  transition: opacity 350ms ease;
 }
+
+.header__lang-link:hover {
+  opacity: .8;
+}
+
 
 @media screen and (max-width: 425px) {
   .header__lang-link {
