--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,10 +1,11 @@
 .lead__subtitle {
-  font-size: 30px;
+  /* font-size: 30px; */
+  font-size: clamp(16px, 3.90625vw, 30px);
   font-weight: 400;
   line-height: 1.2;
   text-align: center;
   margin: 0 auto 64px;
-  max-width: 640px;
+  max-width: clamp(288px, 50vw, 640px);
 }
 
 
@@ -14,17 +15,23 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .lead__subtitle {
+    margin-bottom: clamp(40px, 7.291666666666667vw, 56px);
+  }
+}
+
 @media screen and (max-width: 730px) {
   .lead__subtitle {
-    font-size: 20px;
-    max-width: 288px;
+    /* font-size: 20px; */
+    /* max-width: 288px; */
   }
 }
 
 @media screen and (max-width: 425px) {
   .lead__subtitle {
-    font-size: 16px;
+    /* font-size: 16px; */
     line-height: 1.25;
-    max-width: 288px;
+    /* max-width: 288px; */
   }
 }
