--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,26 +1,28 @@
 .lead__title {
-  font-size: 96px;
+  /* font-size: 96px; */
+  font-size: clamp(40px, 12.5vw, 96px);
   font-weight: 900;
   line-height: 1.05;
   text-align: center;
   max-width: 720px;
-  margin: 0 auto 32px;
+  margin: 0 auto clamp(16px, 4.16vw, 32px);
 }
 
-@media screen and (max-width: 730px) {
+/* @media screen and (max-width: 730px) {
   .lead__title {
     font-size: 72px;
   }
 }
+
 @media screen and (max-width: 640px) {
   .lead__title {
     font-size: 52px;
   }
-}
+} */
 
 @media screen and (max-width: 425px) {
   .lead__title {
-    font-size: 40px;
+    /* font-size: 40px; */
     line-height: 1.1;
   }
 }
