--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,19 +7,31 @@
   align-self: start;
 }
 
-@media screen and (max-width: 820px) {
+/* @media screen and (max-width: 820px) {
   .place__title {
     font-size: 42px;
     line-height: 1.1;
     max-width: 330px;
+  }
+} */
+
+@media screen and (max-width: 1024px) {
+  .place__title {
+    font-size: clamp(54px, 7.03125vw, 72px);
+    line-height: 1.1;
+    max-width: 330px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place__title {
+    font-size: clamp(32px, 5.46875vw, 42px);
   }
 }
 
 @media screen and (max-width: 730px) {
   .place__title {
     font-size: 32px;
-    line-height: 1.1;
     margin: 0 16px 32px 16px;
   }
 }
-
