--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,27 +1,38 @@
 .place {
   display: grid;
   grid-template-columns: 460px 484px;
+  justify-content: center;
   column-gap: 40px;
   row-gap: 48px;
 }
 
 @media screen and (max-width: 1024px) {
   .place {
-    max-width: 928px;
-    grid-template-columns: 440px 456px;
-    column-gap: 32px;
+    max-width: clamp(720px, 0.90625vw, 928px);
+    grid-template-columns: clamp(340px, 42.96875vw, 440px) clamp(352px, 44.53125vw, 456px);
+    column-gap: clamp(28px, 3.125vw, 32px);
+    /* column-gap: 32px; */
   }
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 768px) {
+  .place {
+    max-width: clamp(600px, 93.75vw, 720px);
+    grid-template-columns: clamp(250px, 44.27083333333333vw, 340px) clamp(250px, 45.83333333333333vw, 352px);
+    /* column-gap: clamp(28px, 3.125vw, 32px); */
+    /* column-gap: 32px; */
+  }
+}
+
+/* @media screen and (max-width: 960px) {
   .place {
     max-width: 876px;
     grid-template-columns: 425px 423px;
-    column-gap: 28px;
-  }
-}
 
-@media screen and (max-width: 890px) {
+  }
+} */
+/* column-gap: 28px; */
+/* @media screen and (max-width: 890px) {
   .place {
     max-width: 845px;
     grid-template-columns: 410px 413px;
@@ -33,16 +44,18 @@
     max-width: 812px;
     grid-template-columns: 390px 393px;
   }
-}
+} */
 
-@media screen and (max-width: 820px) {
+/* @media screen and (max-width: 820px) {
   .place {
-    /* max-width: 928px; */
-    grid-template-columns: 340px 352px;
-    column-gap: 28px;
-  }
-}
 
+    grid-template-columns: 340px 352px;
+
+  }
+} */
+
+/* max-width: 928px; */
+/* column-gap: 28px; */
 @media screen and (max-width: 730px) {
   .place {
     display: block;
