--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -4,11 +4,12 @@
   line-height: 1.05;
   text-align: center;
   max-width: 720px;
-  margin: 0 auto clamp(16px, 4.16vw, 32px);
+  margin: 0 auto 32px;
 }
 
 @media screen and (max-width: 425px) {
   .lead__title {
     line-height: 1.1;
+    margin-bottom: 16px;
   }
 }
