--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,5 @@
 .page {
+  min-width: 320px;
   background-color: #2a2c2f;
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
   color: #fff;
